--- a/src/components/list/style.module.css
+++ b/src/components/list/style.module.css
@@ -9,10 +9,32 @@
   padding: 1em;
   border: 1px solid #a855f7;
   margin-bottom: .2em;
+  cursor: pointer;
 }
 
 .ui_list_task_li:hover {
   border-color: #c026d3;
+}
+
+.ui_list_task_li_completed {
+  background-color: #f59e0b;
+}
+
+.ui_list_task_li_completed:hover {
+  border-color: #c026d3;
+}
+
+.ui_list_task_li_span_id{
+  width: 1.1em;
+  height: 1.1em;
+  line-height: 1.1em;
+  border-radius: 50px;
+  padding: .3em .3em;
+  background-color: #44403c
+}
+
+.ui_list_task_li_p {
+  padding: 0 .5em;
 }
 
 .ui_list_task_li_div{
