--- a/src/components/btn_manager_task/style.module.css
+++ b/src/components/btn_manager_task/style.module.css
@@ -1,13 +1,15 @@
+@import url(../../globalStyle/global_style.css);
+
 .btn_edit {
   padding: 0;
   font-size: 1em;
   width: 2em;
   height: 1.5em;
   background-color: transparent;
-  border: 1px solid #9F1239;
+  border: 1px solid var(--border-btn);
 }
 btn_edit:hover{
-  border-color: #646cff;
+  border-color: var(--border-btn-hover);
 }
 
 .checkbox_complited {
