--- a/src/components/list/style.module.css
+++ b/src/components/list/style.module.css
@@ -1,3 +1,5 @@
+@import url(../../globalStyle/global_style.css);
+
 .ul_list_task {
   list-style: none;
   padding: 0;
@@ -8,21 +10,21 @@
   display: flex;
   align-items: center;
   padding: 1em;
-  border: 1px solid #a855f7;
+  border: 1px solid var(--border-li);
   margin-bottom: .2em;
   cursor: pointer;
 }
 
 .ui_list_task_li:hover {
-  border-color: #c026d3;
+  border-color: var(--border-li-hover);
 }
 
 .ui_list_task_li_completed {
-  background-color: #475569;
+  background-color: var(--border-li-completed);
 }
 
 .ui_list_task_li_completed:hover {
-  border-color: #c026d3;
+  border-color: var(--border-li-completed-hover);
 }
 
 .ui_list_task_li_span_id{
@@ -32,7 +34,7 @@
   border-radius: 50px;
   padding: .3em .3em;
   text-align: center;
-  background-color: #44403c
+  background-color: var(--background-span)
 }
 
 .ui_list_task_li_p {
